--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
-  "author": "",
+  "author": "PagoPA S.p.A.",
   "license": "ISC",
   "dependencies": {
     "ejs": "^3.1.6",
