--- a/package.json
+++ b/package.json
@@ -16,8 +16,7 @@
   "dependencies": {
     "ejs": "^3.1.6",
     "express": "^4.17.2",
-    "morgan": "^1.10.0",
-    "nodemon": "^2.0.15"
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
